<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:background="#FFFFFF" android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scroll" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentTop="true"
		android:layout_above="@+id/row_buttons">
		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/edit_title"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_marginTop="15dp" android:layout_marginRight="80dp"
				android:layout_marginLeft="10dp" android:hint="@string/hint_title" />
			<Spinner android:id="@+id/edit_spinner" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:prompt="@string/prompt_project"
				android:layout_marginTop="5dp" android:layout_marginRight="10dp"
				android:layout_marginLeft="10dp" android:layout_below="@+id/edit_title" />
			<EditText android:id="@+id/edit_description"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_marginTop="5dp" android:layout_marginRight="10dp"
				android:layout_below="@+id/edit_spinner" android:layout_marginLeft="10dp"
				android:hint="@string/hint_description" />

			<EditText android:id="@+id/edit_address"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_marginTop="5dp" android:layout_marginRight="10dp"
				android:layout_below="@id/edit_description"
				android:layout_marginLeft="10dp" android:hint="@string/hint_address" />

			<EditText android:id="@+id/edit_nbhood"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_marginTop="5dp" android:layout_marginRight="10dp"
				android:layout_below="@id/edit_address" android:layout_marginLeft="10dp"
				android:hint="@string/hint_neighhood" />

			<LinearLayout android:id="@+id/row_time_text"
				android:layout_marginTop="5dp" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_below="@id/edit_nbhood">
				<TextView android:layout_height="wrap_content"
					android:layout_weight="1" android:paddingLeft="10dp" android:id="@+id/twStart"
					android:textColor="@color/buttonTextColor" android:layout_width="0dp"
					android:text="@string/hint_start" />
				<TextView android:layout_height="wrap_content" android:id="@+id/twEnd"
					android:layout_weight="1" android:textColor="@color/buttonTextColor"
					android:paddingLeft="10dp" android:layout_width="0dp" android:text="@string/hint_end" />
			</LinearLayout>
			<LinearLayout android:id="@+id/row_time"
				android:layout_marginTop="2dp" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_below="@id/row_time_text">
				<Button android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
					android:id="@+id/btnStart" android:layout_width="0dp"
					android:layout_weight="1" />
				<Button android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
					android:id="@+id/btnEnd" android:layout_width="0dp"
					android:layout_weight="1" />
			</LinearLayout>
			<TextView android:layout_height="wrap_content" android:id="@+id/duration"
				android:layout_width="wrap_content" android:layout_below="@id/row_time"
				android:layout_marginTop="5dp" android:paddingLeft="10dp"
				android:textColor="@color/buttonTextColor" android:textSize="18sp"
				android:text="@string/hint_duration" />
		</RelativeLayout>
	</ScrollView>
	<LinearLayout android:id="@+id/row_buttons"
		android:layout_alignParentBottom="true" android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content" android:text="@string/save"
			android:id="@+id/btnSave" android:layout_width="0dp"
			android:layout_weight="1" />
		<Button android:layout_height="wrap_content" android:text="@string/cancel"
			android:id="@+id/btnCancel" android:layout_width="0dp"
			android:layout_weight="1" />
		<Button android:layout_height="wrap_content" android:id="@+id/btnDelete"
			android:layout_weight="1" android:layout_width="0dp" android:text="@string/delete"
			android:layout_alignTop="@id/edit_title" android:layout_alignBottom="@id/edit_title" />
	</LinearLayout>


</RelativeLayout>
