<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:background="#FFFFFF" android:layout_height="fill_parent">
	<TableLayout android:layout_centerInParent="true"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TableRow android:layout_gravity="center">
			<Button android:layout_width="0dp" android:layout_height="wrap_content"
				android:textColor="@color/buttonTextColor" android:id="@+id/btnClockIn"
				android:background="@android:color/transparent" android:drawableTop="@drawable/button_clock"
				android:text="@string/clock_in" android:layout_weight="1" />
			<Button android:layout_width="0dp" android:layout_height="wrap_content"
				android:textColor="@color/buttonTextColor" android:id="@+id/btnClockOut"
				android:background="@android:color/transparent" android:drawableTop="@drawable/button_clock_out"
				android:text="@string/clock_out" android:layout_weight="1" />
			<Button android:layout_weight="1" android:layout_width="0dp"
				android:id="@+id/btnList" android:textColor="@color/buttonTextColor"
				android:layout_height="wrap_content" android:background="@android:color/transparent"
				android:drawableTop="@drawable/button_graph" android:text="@string/list_all" />
		</TableRow>
		<TableRow android:layout_marginTop="20dp"
			android:layout_gravity="center">
			<Button android:layout_width="0dp" android:layout_weight="1"
				android:id="@+id/btnSettings" android:textColor="@color/buttonTextColor"
				android:layout_height="wrap_content" android:background="@android:color/transparent"
				android:drawableTop="@drawable/button_settings" android:text="@string/settings" />
			<Button android:layout_width="0dp" android:layout_weight="1"
				android:textColor="@color/buttonTextColor" android:id="@+id/btnExport"
				android:layout_height="wrap_content" android:background="@android:color/transparent"
				android:drawableTop="@drawable/button_printer" android:text="@string/export" />
		</TableRow>
		<TableRow android:layout_marginTop="20dp"
			android:layout_gravity="center">
				<Button android:layout_width="0dp" android:layout_weight="1"
				android:id="@+id/btnProjects" android:textColor="@color/buttonTextColor"
				android:layout_height="wrap_content" android:background="@android:color/transparent"
				android:drawableTop="@drawable/button_cabinet" android:text="@string/handle_projects" />
			
			<Button android:layout_width="0dp" android:layout_weight="1"
				android:id="@+id/btnInfo" android:textColor="@color/buttonTextColor"
				android:layout_height="wrap_content" android:background="@android:color/transparent"
				android:drawableTop="@drawable/button_info" android:text="@string/info" />

		</TableRow>

	</TableLayout>
</RelativeLayout>
