<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:id="@+id/layout_root"
	android:background="#FFFFFF" android:layout_height="fill_parent">
	<Button android:layout_marginTop="5dp" android:padding="10dp"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:text="@string/now" android:id="@+id/btnClockInNow" />
	<Button android:padding="10dp" android:layout_marginTop="5dp"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:text="@string/with_time_offset" android:id="@+id/btnClockInOffset"
		android:layout_below="@id/btnClockInNow" />
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/adress" android:layout_width="wrap_content"
		android:orientation="horizontal" android:layout_marginTop="10dp"
		android:layout_below="@id/btnClockInOffset"
		android:layout_centerHorizontal="true">
		<TextView android:layout_height="wrap_content"
			android:textSize="16sp" android:textColor="#000000"
			android:layout_width="wrap_content" android:id="@+id/twAdress"
			android:text="@string/adress_col" />
		<TextView android:layout_marginLeft="2dp"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/twClockInAdress" android:text="Götgatan 1"
			android:textSize="16sp" android:textColor="#000000" />
	</LinearLayout>
	<TextView android:id="@+id/hint" android:layout_below="@id/adress"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" android:layout_marginTop="5dp"
		android:text="@string/hint_gps_fix" />
		
	<Button android:padding="10dp" android:layout_marginTop="5dp"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:text="@string/cancel" android:id="@+id/btnCancel"
		android:layout_below="@id/hint" />
</RelativeLayout>
